<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:layout_margin="10dp">


    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:id="@+id/RelativeLayoutSize"
        android:padding="10dp"
        android:clickable="false"
        android:focusable="false"
        android:background="@drawable/backgroudcard">

        <ImageButton
            android:id="@+id/shareBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_share_24" />

        <ImageButton
            android:id="@+id/reportBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/shareBtn"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/reportbtn" />



        <TextView
            android:id="@+id/txtCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:maxLength="50"
            android:text="@string/company_name"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCompanyName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/company_name"
            android:textColor="@color/black"
            android:textSize="12sp"

            android:textStyle="bold" />




        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-20dp"
            android:maxLength="50"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="-20dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="11sp"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtJobType2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCompanyName"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/job_type"
            android:maxLength="50"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtJobType22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCompanyName"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="10dp"
            android:text="@string/job_type"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtJobLocation2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtJobType2"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:maxLength="50"
            android:text="@string/location_of_job"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtJobLocation22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtJobType2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/location_of_job"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtJobDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtJobLocation2"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="45dp"
            android:maxLength="900"
            android:text="@string/job_description"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtJobLocation2"
            android:layout_toEndOf="@+id/txtJobDescription1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtJobDescription1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtJobLocation2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/job_description"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/SendCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/white"
            android:layout_centerHorizontal="true"
            android:text="@string/send_cv"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/btnDown"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/downarrow" />

        <ImageView
            android:id="@+id/btnTrash"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/trash" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>